k8s/bdw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evo1-bdw
  namespace: daai-brs-d
  labels:
    app.kubernetes.io/name: evo1-bdw
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: evo1-bdw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: evo1-bdw
    spec:
      serviceAccountName: evo1-bdw
      containers:
        - name: bdw
          image: docker-hub.nexus.bit.admin.ch/svabra/bit-data-workbench:0.7.12
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: workspace
              mountPath: /workspace
            - name: app-storage
              mountPath: /workspace/service-consumption
            - name: bit-ros-trusted-certs
              mountPath: /myconfigmap/daai-brs-d/bit-ros-trusted-certs
              readOnly: true
          resources:
            requests:
              cpu: "4"
              memory: 4Gi
            limits:
              cpu: "8"
              memory: 12Gi
          startupProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: workspace
          emptyDir: {}
        - name: app-storage
          persistentVolumeClaim:
            claimName: evo1-bdw-storage
        - name: bit-ros-trusted-certs
          configMap:
            name: bit-ros-trusted-certs
