k8s/duckdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tib-daail-evo1-poc-query-engine
  namespace: daai-brs-d
  labels:
    app.kubernetes.io/name: tib-daail-evo1-poc-query-engine
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tib-daail-evo1-poc-query-engine
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tib-daail-evo1-poc-query-engine
    spec:
      containers:
        - name: duckdb
          image: docker-hub.nexus.bit.admin.ch/svabra/tib-daail-evo1-poc-query-engine:0.3.9
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4213
          resources:
            requests:
              cpu: "4"
              memory: 8Gi
            limits:
              cpu: "24"
              memory: 64Gi
          volumeMounts:
            - name: workspace
              mountPath: /workspace
          startupProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: workspace
          emptyDir: {}
