k8s/fastapi-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evo1-fastapi-canary
  namespace: daai-brs-d
  labels:
    app.kubernetes.io/name: evo1-fastapi-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: evo1-fastapi-canary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: evo1-fastapi-canary
    spec:
      containers:
        - name: canary
          image: docker-hub.nexus.bit.admin.ch/svabra/tib-daail-evo1-poc-query-engine-fastapi-canary:0.1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /info
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
