k8s/duckdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tib-daail-evo1-poc-query-engine
  namespace: daai-brs-d
  labels:
    app.kubernetes.io/name: tib-daail-evo1-poc-query-engine
spec:
  selector:
    app.kubernetes.io/name: tib-daail-evo1-poc-query-engine
  ports:
    - name: http
      port: 4213
      targetPort: http
      protocol: TCP
