k8s/fastapi-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evo1-fastapi-canary
  namespace: daai-brs-d
  labels:
    app.kubernetes.io/name: evo1-fastapi-canary
spec:
  selector:
    app.kubernetes.io/name: evo1-fastapi-canary
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
