k8s/bdw-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: evo1-bdw
  namespace: daai-brs-d
  annotations:
    openshift.io/host.generated: "true"
    haproxy.router.openshift.io/timeout: 1h
  labels:
    app.kubernetes.io/name: evo1-bdw
    ros.bit.admin.ch/ingress: extern
spec:
  path: /
  to:
    kind: Service
    name: evo1-bdw
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
