k8s/duckdb-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: evo1
  namespace: daai-brs-d
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/name: tib-daail-evo1-poc-query-engine
    ros.bit.admin.ch/ingress: extern
spec:
  path: /
  to:
    kind: Service
    name: tib-daail-evo1-poc-query-engine
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
